<resources>
    <string name="app_name">Encrypews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_navigation">search</string>
    <string name="home_navigation">Home</string>
    <string name="add_post_navigation">add_post</string>
    <string name="activity_navigation">Activity</string>
    <string name="profile_navigation">Profile</string>
    <string name="message_menu">messaging</string>
    <string name="app_name_secondary">Instagram</string>
    <string name="search_bar">Search Bar</string>
    <string name="activity_toolbar_title">Activity</string>
    <string name="random_post_no">15</string>
    <string name="posts_name">Posts</string>
    <string name="followers_name">Followers</string>
    <string name="following_name">Following</string>
    <string name="user_bio_placeholder">Bio info user</string>
    <string name="user_name_placeholder">USERNAME</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_prompt_text">Don\'t have an account?Sign Up</string>
    <string name="user_name">Name</string>
    <string name="user_id">User Id</string>
    <string name="sign_in_prompt_text">Already have an account?Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_profile_heading">Edit Profile</string>
    <string name="change_dp_text">Change Profile Photo</string>
    <string name="user_name_id">User Name</string>
    <string name="user_bio">Bio</string>
    <string name="search_user_name">Search Users</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="random_hyphen">-</string>
    <string name="add_post_heading">Add Post</string>
    <string name="add_caption">Caption</string>
    <string name="count_likes">%1$d Likes</string>
    <string name="view_comments">View all %1$d comments</string>
    <string name="caption_username">%1$d</string>
    <string name="caption_content">%1$d</string>
    <string name="add_comment">Add Comment</string>
    <string name="message">Message</string>
    <string name="please_wait">Please Wait</string>
    <string name="Typing">Typing…</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="unfollow">unfollow</string>
    <string name="save_post">save post</string>
    <string name="source">SOURCE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="NEWS">NEWS</string>
    <string name="no_posts_yet">No Posts Yet!</string>
    <string name="follow_some_user">Please follow some users</string>
</resources>