<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home_nav"
        android:title="@string/home_navigation"
        android:icon="@drawable/home_nav_selector"
        />
    <item android:id="@+id/search_nav"
        android:title="@string/search_navigation"
        android:icon="@drawable/search_outline"
        />
    <item android:id="@+id/add_post_nav"
        android:title="@string/add_post_navigation"
        android:icon="@drawable/add_box_outlined"
        />
    <item android:id="@+id/activity_nav"
        android:title="@string/activity_navigation"
        android:icon="@drawable/activity_nav_selector"
        />
    <item android:id="@+id/profile_nav"
        android:title="@string/profile_navigation"
        android:icon="@drawable/profile_nav_outlined"
        />
</menu>