<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/padding_ll_edit_profile"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_profile_heading"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_edit_profile_size"
            android:layout_marginStart="@dimen/margin_start_tv_edit_profile"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/iv_done"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"/>
        <ProgressBar
            android:id="@+id/progressBar_editProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:indeterminateTint="@color/mainBlue"
            android:visibility="gone"
            />


    </LinearLayout>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_image_edit_profile"
        android:layout_width="@dimen/civ_size_edit_profile"
        android:clickable="true"
        android:layout_height="@dimen/civ_size_edit_profile"
        app:civ_border_color="?attr/colorControlNormal"
        android:layout_marginTop="@dimen/marginTop_civ_ep"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_circle_background_color="@color/offWhite"
        app:civ_border_width="@dimen/profile_image_border"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_change_profile_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_tv_change_dp"
        android:text="@string/change_dp_text"
        android:textColor="@color/mainBlue"
        android:gravity="center"
        android:textSize="@dimen/change_dp_tv_size"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/marginTop_et_ep">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name_ep"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColorHint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_marginTop="@dimen/margin_top_et"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_user_name_ep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_id"
            android:textColorHint="@color/grey"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_et">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_bio_ep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_bio"
            android:textColorHint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>









</LinearLayout>